<resources>
    <string name="app_name">BKCS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">BK CS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_maps">Map</string>


    <!--total-->
    <string name="Ok">OK</string>
    <string name="Cancel">CANCEL</string>

    <!--menu-->
    <string name="Language">Language</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="Report">Report</string>
    <string name="Cost">Cost</string>
    <string name="Transports">Transports</string>
    <string name="Location">Location</string>
    <string name="Account">Account</string>
    <string name="Manage">Manage</string>
    <string name="Refresh">Refresh</string>

    <!--account layout-->
    <string name="Change_Email">Change Email</string>
    <string name="Change_Password">Change Password</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_New_Password">Confirm New Password</string>
    <string name="New_Email">New Email</string>
    <string name="Confirm_New_Email">Confirm New Email</string>
    <string name="Change">CHANGE</string>

    <!--account code-->
    <string name="Wrong_Password">Wrong Password</string>
    <string name="Enter_Password">Please Enter Your Password</string>
    <string name="Email_Empty">Email is empty</string>
    <string name="Email_Match">Email does not match</string>
    <string name="Password_Empty">Password is empty</string>
    <string name="Password_Match">Password does not match</string>

    <!--map-->
    <string name="Current_Location">Current location</string>
    <string name="Disease">Disease</string>
    <string name="Earthquake">Earthquake</string>
    <string name="Stop">Stop over 30 minutes</string>

    <!--login-->
    <string name="Sign_In">SIGN IN</string>
    <string name="Forgot_Password">Forgot password?</string>
    <string name="Please_Wait">Please Wait...</string>
    <string name="Enter_Email">Please Enter Your Email</string>
    <string name="Wrong_Email_Password">Wrong email or password</string>
    <string name="Check_Email">Email has been sent</string>
    <string name="Wrong_Email">Email does not exist</string>
    <string name="Use_Network">Use Internet and GPS?</string>
    <string name="Use_Network_Text">Use GPS, Wi-Fi, and cell networks for this app</string>

    <!--about-->
    <string name="Version">Version</string>
    <string name="Author">Author</string>

    <!--cost-->
    <string name="Distance">DISTANCE</string>
    <string name="Duration">DURATION</string>

    <string name="title_activity_cost">BK CS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
